src/main/java/application/testData/invalidRandomAddresses/hard/completedCorrectly/RandomAddressesWithThreeWrongRandomFieldsWithoutRelantionship.java
package application.testData.invalidRandomAddresses.hard.completedCorrectly;

public class RandomAddressesWithThreeWrongRandomFieldsWithoutRelantionship {
}
